--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 @font-face {
 	font-family: 'Rhapsody';
-	src: url('../fonts/OTRhapsody.otf') format('opentype');
+	src: url('fonts/OTRhapsody.otf') format('opentype');
 	font-weight: normal;
 	font-style: normal;
 }
