--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,8 @@
 @font-face {
-	font-family: 'Rhapsody';
-	src: url('fonts/OTRhapsody.otf') format('opentype');
-	font-weight: normal;
-	font-style: normal;
+  font-family: 'Rhapsody';
+  src: url('Softness/FONTS/OTRhapsody.otf') format('opentype');
+  font-weight: normal;
+  font-style: normal;
 }
 
 
