--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: 'Rhapsody';
-  src: url('Softness/font/OTRhapsody.otf') format('opentype');
+  src: url('../font/OTRhapsody.otf') format('opentype');
   font-weight: normal;
   font-style: normal;
 }
@@ -23,16 +23,20 @@ h1 {
   height: 100vh;
 }
 
-  #headline-container {
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    height: 100vh; /* Set the height to 100% of the viewport height */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: white;
-    font-size: 10vh; /* Adjust font size as needed */
-    font-weight: bold;
-    text-align: center;
-  }
+#headline {
+  position: absolute;
+  bottom: 20px; 
+  left: 50%;
+  color:blue;
+  transform: translateX(-50%);
+  text-align: center;
+  font-family: 'Rhapsody', sans-serif;
+  font-size: 15vh; 
+  font-weight: bold;
+  padding: 10px; 
+  cursor: pointer; 
+  transition: all 0.3s ease-in-out; 
+  max-width: calc(100vw - 40px);
+  max-height: calc(100vh - 40px); 
+  overflow: hidden;
+}
