--- a/css/style.css
+++ b/css/style.css
@@ -19,11 +19,6 @@ body, html {
   overflow: hidden;
 }
 
-h1 {
-  font-family: 'Rhapsody';
-  font-size: 20vh;
-}
-
 #vanta-container {
   width: 100%;
   height: 100vh;
@@ -37,6 +32,7 @@ h1 {
   width: 50%; 
   max-width: 400px;
   background-color: yellow;
+  transform: skew(0deg, 10deg);
   color: black;
   text-align: left;
   padding-left: 40px;
@@ -44,30 +40,28 @@ h1 {
   padding-top: 15px;
   font-size: 30px; 
   font-family: 'Newedge';
-  line-height: 1.5; /
-  position: fixed;
+  line-height: 1.5; 
   bottom: -750px; 
   left: 30%;
   transform: translateX(-50%);
   cursor: pointer;
   z-index: 2;
-  position:relative;
+  position: fixed;
   transition: bottom 0.3s ease, transform 0.3s ease;
 }
 
 .interactive-div:hover {
   bottom: 5px; /* Move up by 5px on hover */
+ 
 }
 
-.interactive-div.clicked {
+.interactive-div.clicked { 
   bottom: auto; 
   top: 100px;
   transform: translateX(-50%) translateY(0);
-  transition:  transform 0.3s ease; 
+  transition: transform 0.3s ease; 
 }
-
 .content {
- 
-  max-height: 50%; 
+  max-height: 50%;
   overflow-y: auto; 
 }
