--- a/css/style.css
+++ b/css/style.css
@@ -65,3 +65,39 @@ body, html {
   max-height: 50%;
   overflow-y: auto; 
 }
+
+
+#shape {
+  width: 4vh;
+  height:4vh;
+  background-color: yellow;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  margin: 30vh;
+  align-items: center;
+  cursor: pointer;
+  font-size: 20px;
+}
+
+
+#shape, #shape2:hover {
+  filter: blur(5px);
+
+}
+
+
+.square {
+  border-radius: 0;
+}
+
+.image-container {
+  display: none;
+  margin-top: 20px;
+}
+
+.image-container img {
+  width: 100px;
+  height: 100px;
+}
+
