--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 @font-face {
-  font-family: 'Rhapsody';
+  font-family: 'OTRhapsody';
   src: url('../font/OTRhapsody.otf') format('opentype');
   font-weight: normal;
   font-style: normal;
@@ -22,16 +22,35 @@ body, html {
 .index{
   z-index: 5;
   font-family: 'Newedge';
-  font-size: 40px;
-  top: 30px;
-  left: 90%;
+  font-size: 20px;
+  top: 0px;
+  left: 95%;
   cursor: pointer;
   position: relative;
 }
 
 .index:hover{
   color:yellow;
+
 }
+
+#volume{
+  z-index: 6;
+  font-family: 'Newedge';
+  font-size: 20px;
+  top: 22px;
+  left: 82%;
+  color: black;
+  cursor: pointer;
+  position: relative;
+  text-decoration: none;
+}
+
+#volume:hover{
+  color: yellow;
+  text-decoration: dotted;
+}
+
 #vanta-container {
   width: 100%;
   height: 100vh;
@@ -48,6 +67,7 @@ body, html {
   transform: skew(0deg, 10deg);
   color: black;
   text-align: left;
+  line-height: 1;
   padding-left: 40px;
   padding-right: 40px;
   padding-top: 5px;
@@ -65,7 +85,7 @@ body, html {
 }
 
 .interactive-div:hover {
-  bottom: -20px; 
+  bottom: 0px; 
  
 }
 
@@ -75,16 +95,28 @@ body, html {
   transform: translateX(-50%) translateY(0);
   transition: transform 0.3s ease; 
 }
+
+
 .content {
   max-height: 50%;
   overflow-y: auto; 
 }
-.shape-container{
 
+
+
+
+#shape-container{
+  margin: 50px;
+  width:90%;
+  height:90%;
+  overflow: hidden;
 }
+
+
+
 .shape {
-  width: 4vh;
-  height: 4vh;
+  width: 5vh;
+  height: 5vh;
   background-color: yellow;
   border-radius: 50%;
   display: flex;
@@ -94,53 +126,128 @@ body, html {
   font-size: 12px;
   font-family:'Newedge' ;
   filter: blur(10px);
-  position: absolute; /* Position absolutely for random placement */
+  position: absolute; 
 }
 
 .shape:hover {
   filter: blur(0px);
+  
+}
 
+
+.shape.clicked {
+  background-color: rgb(108, 172, 241);
+  filter: blur(10px);
 }
 
 
 
-.square {
-  border-radius: 0;
-}
 
-.image-container {
-  display: none;
-  margin-top: 20px;
-}
+/* custom content */
 
-.image-container img {
-  width: 100px;
-  height: 100px;
-}
+
 
 .custom-content {
   display: none;
   position: absolute;
-  width: 80%;
-  font-family: 'Newedge';
+  max-width: 100vw;
+  top: 50%;
+  left: 50%;
+  line-height: 1;
+  transform: translate(-50%, -50%);
+  padding: 15px;
   background-color: yellow;
-  cursor: cell;
-  filter: drop-shadow(0 0 0.70rem rgb(129, 125, 125));
-  border-radius: 5px;
-  margin: 1vh;
-  top: 5px;
-  bottom: 5px;
-  text-align: center;
-  overflow-y: auto;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+  text-align: left;
   z-index: 100;
+  overflow-y: auto;
+
+  font-family: 'Newedge', sans-serif;
+  display: grid;
+  grid-template-columns: 160px auto;
+  grid-gap: 10px;
 }
+
+.custom-content h2,
+.custom-content h3,
+.custom-content p {
+  margin: 0;
+  
+}
+
+.custom-content h2 {
+  text-align: left;
+  font-size: 25px; 
+  padding-bottom: 5px;
+  line-height: 1;
+}
+
+.custom-content h3 {
+  text-align: right;
+  font-size: 25px; 
+  padding-bottom: 5px;
+  line-height: 1;
+}
+
+.custom-content p {
+  font-size: 14px;
+  padding-right: 7px;
+ 
+  grid-row: 2 / span 1;
+  text-align:start;
 }
 
 .custom-content img {
-  max-width: 70%;
-  max-height: 50%;
+  grid-column: 2 / -1;
+  grid-row: 2 / span 2;
+  justify-self: center;
+  max-width: 60vh;
+}
 
-  border-radius: 5px;
-  margin-left: 10%;
-  margin-bottom: 10px;
+
+
+.custom-content p:last-child {
+  position: absolute;
+  bottom: 20px;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+
+
+@media screen (max-width: 600px)   {
+
+  .custom-content {
+  width: 50%; 
+  max-width: 50px;
+  background-color: yellow;
+  transform: skew(0deg, 10deg);
+  color: black;
+  text-align: left;
+  line-height: 1;
+  padding-left: 5px;
+  padding-right: 5px;
+  padding-top: 5px;
+  font-size: 5px; 
+  font-family: 'Newedge';
+  line-height: 1.5; 
+  bottom: -50px; 
+  left: 20%;
+  filter: drop-shadow(0 0 0.30rem rgb(129, 125, 125));
+  transform: translateX(-50%);
+  cursor: pointer;
+  z-index: 2;
+  position: fixed;
+  transition: bottom 0.3s ease, transform 0.3s ease;
+}
+
+
+
+
+
+
+
+
+
+
 }
