--- a/css/style.css
+++ b/css/style.css
@@ -156,6 +156,7 @@ body, html {
   line-height: 1;
   transform: translate(-50%, -50%);
   padding: 15px;
+  cursor:pointer;
   background-color: yellow;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
   text-align: left;
